[package]
name = "meexprox"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_yml = "0.0.12"
rust_mc_proto = { git = "https://github.com/MeexReay/rust_mc_proto", features = ["atomic_clone"] }
uuid = "1.11.0"
log = "0.4.22"
simplelog = "0.12.2"
ignore-result = "0.2.0"
random-string = "1.1.0"
ring = "0.17.8"
bytebuffer = "2.3.0"